# rust_fixed_width

./: .gitignore  .travis.yml  Cargo.toml  README.md  search-index.js
implementors/pad/: trait.PadStr.js
pad/: enum.Alignment.html  index.html  trait.PadStr.html
rust_fixed_width/: index.html  sidebar-items.js
rust_fixed_width/builder/: enum.DataError.html  enum.Error.html  index.html  sidebar-items.js  struct.DataBuilder.html  struct.FileBuilder.html
rust_fixed_width/common/: enum.InvalidRangeError.html  fn.normalize_range.html  index.html  sidebar-items.js  struct.FileIterator.html  trait.File.html  trait.FromField.html  trait.Line.html  trait.Range.html  trait.ToField.html
rust_fixed_width/in_memory/: enum.LineError.html  index.html  sidebar-items.js  struct.File.html  struct.Line.html
rust_fixed_width/padders/: DefaultPadder.t.html  IdentityPadder.t.html  Padder.t.html  PaddingError.t.html  UnPadder.t.html  enum.PaddingError.html  index.html  sidebar-items.js  struct.DefaultPadder.html  struct.Error.html  struct.IdentityPadder.html  trait.Padder.html  trait.UnPadder.html
rust_fixed_width/reader/: enum.Error.html  enum.LineError.html  index.html  sidebar-items.js  struct.FileIterator.html  struct.FileReader.html  struct.LineReader.html
rust_fixed_width/record/: enum.Error.html  index.html  sidebar-items.js
rust_fixed_width/spec/: index.html  (+19 more)
src/: builder.rs  common.rs  data_type.rs  error.rs  formatter.rs  in_memory.rs  lib.rs  line.rs  padder.rs  padders.rs  parser.rs  reader.rs  recognizer.rs  recognizers.rs  record.rs  spec.rs  test.rs  writer.rs
(+65 files in other folders)
