[package]
name = "rust_fixed_width"
version = "0.1.0"
authors = ["yosefderay <yosefderay770@gmail.com>"]
description = "library that allows for easier manipulation of fixed width files allowing for the ability to name fields and such using specs"
keywords = ["fixed_width", "random_access"]
license = "MIT"
repository = "https://github.com/yjv/rust_fixed_width"
documentation = "http://yjv.github.io/rust_fixed_width/rust_fixed_width/"

[features]
default = ["all"]
all = ["pad"]
test = ["all"]

[dependencies]
pad = { version = "0.1.4", optional = true }
